force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>Tracks individual interview rounds conducted for a candidate against a specific job position, including interviewer, scheduling, feedback, and recommendation outcome.</description>
    <label>Interview</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interview Name</label>
        <startingNumber>0</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>