force-app/main/default/objects/Interview__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <inlineHelpText>Interviewer's detailed written feedback. Required once the interview is marked Completed (enforced by validation rule).</inlineHelpText>
</CustomField>