force-app/main/default/objects/Interview__c/fields/Interview_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interview_DateTime__c</fullName>
    <label>Interview Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
    <inlineHelpText>Scheduled date and time for this interview round. Must be in the future (enforced by validation rule).</inlineHelpText>
</CustomField>