force-app/main/default/objects/Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
    <inlineHelpText>Salesforce User conducting this interview round. Marked Required on the page layout (platform does not allow schema-required Lookup(User) fields).</inlineHelpText>
</CustomField>