force-app/main/default/objects/Interview__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <inlineHelpText>The job position this interview round is evaluating the candidate against.</inlineHelpText>
</CustomField>