force-app/main/default/objects/Interview__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Interview Mode</label>
    <type>Picklist</type>
    <inlineHelpText>How this interview will be conducted.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
                <default>true</default>
                <label>In-Person</label>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>