force-app/main/default/objects/Interview__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <inlineHelpText>Interviewer's overall rating of the candidate's performance in this round. Required once the interview is marked Completed (enforced by validation rule).</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
            <value>
                <fullName>2 - Below Average</fullName>
            </value>
            <value>
                <fullName>3 - Average</fullName>
            </value>
            <value>
                <fullName>4 - Good</fullName>
            </value>
            <value>
                <fullName>5 - Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>