force-app/main/default/objects/Interview__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <inlineHelpText>Interviewer's hiring recommendation based on this round.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Recommend</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Do Not Recommend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>