force-app/main/default/objects/Interview__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Interview Round</label>
    <required>true</required>
    <type>Picklist</type>
    <inlineHelpText>Which stage of the interview loop this round represents.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1 - Technical Screening</fullName>
                <default>true</default>
                <label>L1 - Technical Screening</label>
            </value>
            <value>
                <fullName>L2 - Technical Deep Dive</fullName>
            </value>
            <value>
                <fullName>L3 - System Design</fullName>
            </value>
            <value>
                <fullName>HR - Behavioral &amp; Culture Fit</fullName>
            </value>
            <value>
                <fullName>Final - Director Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>