force-app/main/default/objects/Interview__c/validationRules/Feedback_Required_When_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback_Required_When_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Completed"),
  ISBLANK(Feedback__c)
)</errorConditionFormula>
    <errorMessage>Feedback is required when Interview Status is Completed.</errorMessage>
    <errorDisplayField>Feedback__c</errorDisplayField>
</ValidationRule>