force-app/main/default/objects/Interview__c/validationRules/Interview_DateTime_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_DateTime_Must_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(ISNEW(), ISCHANGED(Interview_DateTime__c)),
  Interview_DateTime__c &lt; NOW()
)</errorConditionFormula>
    <errorMessage>Interview Date &amp; Time must be set in the future.</errorMessage>
    <errorDisplayField>Interview_DateTime__c</errorDisplayField>
</ValidationRule>