force-app/main/default/objects/Interview__c/validationRules/Rating_Required_When_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Required_When_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Completed"),
  ISBLANK(TEXT(Rating__c))
)</errorConditionFormula>
    <errorMessage>Rating is required when Interview Status is Completed.</errorMessage>
    <errorDisplayField>Rating__c</errorDisplayField>
</ValidationRule>